applications/applications/objects/Demo_Object_24_2_Release__c.object
<CustomObject>
    <fields>
        <fullName>Additional__c</fullName>
        <label>Additional</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_Date__c</fullName>
        <label>Validity</label>
        <type>Date</type>
    </fields>
    <label>Demo Object 24.2 Release</label>
    <nameField>
        <label>Demo Object 24.2 Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>